--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
             </button>
         </div>
     </main>
-
+    <script src="{{ url_for('static', filename='descriptions.js') }}"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
